[package]
name = "tetris"
version = "0.1.0"
authors = ["neu-inata <sironeu@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1-rc.0"
cgmath = { version = "0.18.0", features = ["mint"]}
rand = "0.8.3"
